Fix icon & symbol alignment

--- a/src/modules/admin/components/Tokens/TokenCard.css
+++ b/src/modules/admin/components/Tokens/TokenCard.css
@@ -9,7 +9,7 @@
 
 .cardHeading {
   display: flex;
-  align-items: start;
+  align-items: center;
   height: headerFooterHeights;
 }
 
